Fix column breaks in popup (always group categories)

--- a/src/drivers/webextension/css/popup.css
+++ b/src/drivers/webextension/css/popup.css
@@ -41,6 +41,7 @@ body {
 }
 
 .detected__category {
+  page-break-inside: avoid;
   break-inside: avoid-column;
   padding-bottom: 1rem;
 }
